z-index fix

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@
   margin-top: 40px;
   font-size: 1.8em;
   padding: 15px;
-  font-family: sans-serif
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .speech h2 {
@@ -179,6 +179,11 @@
 .speech h3 {
   font-size: 1 em;
   width: 80%;
+  
+}
+
+.speech h4 {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .imagen {
